fix: prevent overflowing texts (#126)

--- a/app/modules/components/wysiwyg/wysiwyg.scss
+++ b/app/modules/components/wysiwyg/wysiwyg.scss
@@ -8,6 +8,7 @@ tg-wysiwyg {
     }
     .editor {
         width: 100%;
+        word-break: break-all;
     }
     .tools {
         display: none;
