--- a/app/modules/user-timeline/user-timeline/user-timeline.scss
+++ b/app/modules/user-timeline/user-timeline/user-timeline.scss
@@ -6,6 +6,7 @@
         position: relative;
         p {
             margin-bottom: 0;
+            word-break: break-all;
         }
         a,
         .username {
